--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   flutter_svg: ^2.0.16
   flutter_spinkit: ^5.2.1
   country_picker: ^2.0.27
-  flutter_otp_text_field: ^1.2.0
+  pin_code_fields: ^8.0.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
