--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,11 @@ dependencies:
   country_picker: ^2.0.27
   pin_code_fields: ^8.0.1
   flutter_animate: ^4.5.2
+  country_flags: ^3.1.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  firebase_messaging: ^15.0.4
+
 
 dev_dependencies:
   flutter_test:
