--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,8 @@ dependencies:
   flutter_animate: ^4.5.2
   country_flags: ^3.1.0
   firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
-  firebase_messaging: ^15.0.4
-
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
