QA/KeyStore/Reset-ongoing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
+  cloud_functions: ^5.2.0
 
 dev_dependencies:
   flutter_test:
