--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,20 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias "SquareInfosoft"
+            keyPassword "SquareInfosoft"
+            storeFile file('../SquareInfosoft')
+            storePassword "SquareInfosoft"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
         }
     }
 }
