CodeRefactor/ApiSetup/Email - ongoing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,10 +36,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias "SquareInfosoft"
-            keyPassword "SquareInfosoft"
-            storeFile file('../SquareInfosoft')
-            storePassword "SquareInfosoft"
+            keyAlias "key0"
+            keyPassword "AcuroSquare"
+            storeFile file('../acuroKey0')
+            storePassword "AcuroSquare"
         }
     }
 
