--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
   cloud_functions: ^5.2.0
+  device_info_plus: ^11.2.0
 
 dev_dependencies:
   flutter_test:
